overflow fix

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -97,7 +97,7 @@ body {
     margin-bottom: 20px;
 }
 .mugshot {
-    width: 100%;
+    width: 75%;
     max-width: 350px;
     border: 5px solid #444444;
     border-radius: 300px;
